refactor: improve gRPC server binding handling and enhance order persistence logic